<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="promoInfo"
            type="it.lucavallerini.kenamobile.OverviewAdapter.PromoCardView" />

        <variable
            name="promoCard"
            type="it.lucavallerini.kenamobile.PromoInfo" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/promoNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/promoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/primary"
                    android:padding="8dp"
                    android:text="@{promoCard.promoName}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/promoDescriptionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/promoDescriptionButtonContentDescription"
                    android:onClick="@{() -> promoInfo.showDialog(context, promoCard.promoName, promoCard.longDescription)}"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/promoName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_info" />
            </android.support.constraint.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/promoPriceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promoNameLayout"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/promoPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/promoPriceLabel" />

                <TextView
                    android:id="@+id/promoPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/promoPriceLabel"
                    android:text="@{promoCard.promoPrice}"
                    android:textAlignment="viewEnd" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/promoActiveFromLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promoPriceLayout"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/promoActiveFromLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/promoActiveFromLabel" />

                <TextView
                    android:id="@+id/promoActiveFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/promoActiveFromLabel"
                    android:text="@{@string/dateHourFormat(promoCard.promoActivationDate)}"
                    android:textAlignment="viewEnd" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/promoActiveUntilLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promoActiveFromLayout"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/promoActiveUntilLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/promoActiveUntilLabel" />

                <TextView
                    android:id="@+id/promoActiveUntil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/promoActiveUntilLabel"
                    android:text="@{@string/dateHourFormat(promoCard.promoTerminationDate)}"
                    android:textAlignment="viewEnd" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/promoActiveUntilLayout"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/callsLabel" />

                    <TextView
                        android:id="@+id/promoCallsMeterText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{@string/callsMeterText(promoCard.callsHuman, promoCard.callsUnit, promoCard.callsMinTotal, promoCard.callsUnit)}"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dataLabel" />

                    <TextView
                        android:id="@+id/promoDataMeterText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{@string/dataMeterText(promoCard.dataHuman, promoCard.dataUnit, promoCard.dataGByteTotal, promoCard.dataUnit)}"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dataEuLabel" />

                    <TextView
                        android:id="@+id/promoDataEuMeterText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{@string/dataEuMeterText(promoCard.dataEuHuman, promoCard.dataEuUnit, promoCard.dataEuGByteTotal, promoCard.dataEuUnit)}"
                        android:textAlignment="viewEnd" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>